force-app/main/default/objects/EligibilityCriteria__c/EligibilityCriteria__c.object-meta.xml
<CustomObject>
    <description>Ogggetto  custom per la gestione dei criteri di eleggibilità legati ai prodotti</description>
    <label>Criterio di Eleggibilita</label>
    <nameField>
        <displayFormat>COE-{00000000}</displayFormat>
        <label>Criterio di Eleggibilita Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Criteri di Eleggibilita</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>