force-app/main/default/objects/EligibilityCriteria__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo di configurazione usato per indicare l&apos;agenzia del record di criterio nella funzionalità di Configurazione Offerta Tecnica</description>
    <label>Agenzia</label>
    <referenceTo>AgentMatrix__c</referenceTo>
    <relationshipLabel>Criteri di Eleggibilita</relationshipLabel>
    <relationshipName>Criteri_di_Eleggibilita</relationshipName>
    <type>Lookup</type>
</CustomField>