force-app/main/default/objects/EligibilityCriteria__c/fields/ATCGas__c.field-meta.xml
<CustomField>
    <fullName>ATCGas__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo di configurazione usato per indicare se ci deve essere(o meno) la presenza l&apos;ATC Gas per il record di criterio nella funzionalità di Configurazione Offerta Tecnica</description>
    <label>ATC Gas</label>
    <type>Checkbox</type>
</CustomField>