force-app/main/default/objects/EligibilityCriteria__c/fields/BillSendingMethod__c.field-meta.xml
<CustomField>
    <fullName>BillSendingMethod__c</fullName>
    <description>Modalità di invio della bottetta</description>
    <label>Modalità Invio Bolletta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_BillSendingMethod</valueSetName>
    </valueSet>
</CustomField>