force-app/main/default/objects/EligibilityCriteria__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo di configurazione usato per indicare la capagna di riferimento per il record di criterio nella funzionalità di Configurazione Offerta Tecnica</description>
    <label>Gruppo Campagne</label>
    <referenceTo>CampaignEligibilityGroup__c</referenceTo>
    <relationshipLabel>Gruppo campagne</relationshipLabel>
    <relationshipName>CampaignGroups</relationshipName>
    <type>Lookup</type>
</CustomField>