force-app/main/default/objects/EligibilityCriteria__c/fields/CampaignName__c.field-meta.xml
<CustomField>
    <fullName>CampaignName__c</fullName>
    <description>Campo di configurazione usato per indicare l&apos;agenzia del record di criterio nella funzionalità di Configurazione Offerta Tecnica.</description>
    <label>Nome Campagna</label>
    <length>255</length>
    <type>Text</type>
</CustomField>