force-app/main/default/objects/EligibilityCriteria__c/fields/CategoryTypeClient__c.field-meta.xml
<CustomField>
    <fullName>CategoryTypeClient__c</fullName>
    <description>Campo di configurazione usato per indicare la tipologia cliente del record di criterio nella funzionalità di Configurazione Offerta Tecnica</description>
    <label>Tipo Cliente Categoria</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_CategoryTypeClient</valueSetName>
    </valueSet>
</CustomField>