force-app/main/default/objects/EligibilityCriteria__c/fields/CategoryTypeClientOperator__c.field-meta.xml
<CustomField>
    <fullName>CategoryTypeClientOperator__c</fullName>
    <description>Campo di configurazione usato per indicare la tipologia cliente del record di criterio nella funzionalità di Configurazione Offerta Tecnica.</description>
    <label>Tipo Cliente Categoria operatore</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_EligibilityParameteOperator</valueSetName>
    </valueSet>
</CustomField>