force-app/main/default/objects/EligibilityCriteria__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Campo di  configurazione usato per indicare il canale del record di criterio nella funzionalità di Configurazione Offerta Tecnica</description>
    <label>Canale</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>ChannelOperator__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>HDT_SalesChannel</valueSetName>
    </valueSet>
</CustomField>