force-app/main/default/objects/EligibilityCriteria__c/fields/ChannelOperator__c.field-meta.xml
<CustomField>
    <fullName>ChannelOperator__c</fullName>
    <description>Campo di configurazione usato per indicare il canale del record di criterio nella funzionalità di Configurazione Offerta Tecnica.</description>
    <label>Operatore canale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_EligibilityParameteOperator</valueSetName>
    </valueSet>
</CustomField>