force-app/main/default/objects/EligibilityCriteria__c/fields/ClientAge__c.field-meta.xml
<CustomField>
    <fullName>ClientAge__c</fullName>
    <description>Campo di configurazione usato per indicare la fascia di età del record di criterio nella funzionalità di Configurazione Offerta Tecnica</description>
    <label>Eta Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_ClientAge</valueSetName>
    </valueSet>
</CustomField>