force-app/main/default/objects/EligibilityCriteria__c/fields/ClientAgeMax__c.field-meta.xml
<CustomField>
    <fullName>ClientAgeMax__c</fullName>
    <description>Campo di configurazione usato per indicare l’età massima del cliente.</description>
    <label>Età cliente max</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>