force-app/main/default/objects/EligibilityCriteria__c/fields/ClientAgeMin__c.field-meta.xml
<CustomField>
    <fullName>ClientAgeMin__c</fullName>
    <description>Campo di configurazione usato per indicare l’età minima del cliente.</description>
    <label>Età cliente min</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>