force-app/main/default/objects/EligibilityCriteria__c/fields/ClientMarker__c.field-meta.xml
<CustomField>
    <fullName>ClientMarker__c</fullName>
    <description>Campo di configurazione usato per indicare la marcatura cliente del record di criterio nella funzionalità di Configurazione Offerta Tecnica</description>
    <label>Marcatura Cliente</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_CustomerMarking</valueSetName>
    </valueSet>
</CustomField>