force-app/main/default/objects/EligibilityCriteria__c/fields/ClientMarkerOperator__c.field-meta.xml
<CustomField>
    <fullName>ClientMarkerOperator__c</fullName>
    <description>Campo di configurazione usato per indicare la marcatura cliente del record di criterio nella funzionalità di Configurazione Offerta Tecnica.</description>
    <label>Marcatura Cliente Operatore</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_EligibilityParameteOperator</valueSetName>
    </valueSet>
</CustomField>