force-app/main/default/objects/EligibilityCriteria__c/fields/CodeCriteria__c.field-meta.xml
<CustomField>
    <fullName>CodeCriteria__c</fullName>
    <description>Campo di configurazione usato per indicare i nomi/codici dei criteri usati nella funzionalità dei Criteri di Eleggiblità</description>
    <label>Codice Criterio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>