force-app/main/default/objects/EligibilityCriteria__c/fields/CompanyOwner__c.field-meta.xml
<CustomField>
    <fullName>CompanyOwner__c</fullName>
    <description>Campo di configurazione usato per indicare la Company Owner del record di criterio nella funzionalità di Configurazione Offerta Tecnica</description>
    <label>Company Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>