force-app/main/default/objects/EligibilityCriteria__c/fields/CompanyOwnerOperator__c.field-meta.xml
<CustomField>
    <fullName>CompanyOwnerOperator__c</fullName>
    <description>Campo di configurazione usato per indicare la Company Owner del record di criterio nella funzionalità di Configurazione Offerta Tecnica.</description>
    <label>Company Owner Operatore</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_EligibilityParameteOperator</valueSetName>
    </valueSet>
</CustomField>