force-app/main/default/objects/EligibilityCriteria__c/fields/ConsumptionRangeEE__c.field-meta.xml
<CustomField>
    <fullName>ConsumptionRangeEE__c</fullName>
    <label>Fasce Consumo EE</label>
    <length>255</length>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_RangeConsumptionEle</valueSetName>
    </valueSet>
</CustomField>