force-app/main/default/objects/EligibilityCriteria__c/fields/ConsumptionRangeEEmax__c.field-meta.xml
<CustomField>
    <fullName>ConsumptionRangeEEmax__c</fullName>
    <description>Campo di configurazione usato per indicare il valore massimo del consumo elettrico.</description>
    <label>Consumo EE max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>