force-app/main/default/objects/EligibilityCriteria__c/fields/ConsumptionRangeEEmin__c.field-meta.xml
<CustomField>
    <fullName>ConsumptionRangeEEmin__c</fullName>
    <description>Campo di configurazione usato per indicare il valore minimo del consumo elettrico.</description>
    <label>Consumo EE min</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>