force-app/main/default/objects/EligibilityCriteria__c/fields/ConsumptionRangeGAS__c.field-meta.xml
<CustomField>
    <fullName>ConsumptionRangeGAS__c</fullName>
    <label>Fasce Consumo GAS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>