force-app/main/default/objects/EligibilityCriteria__c/fields/ConsumptionRangeGASmax__c.field-meta.xml
<CustomField>
    <fullName>ConsumptionRangeGASmax__c</fullName>
    <description>Campo di configurazione usato per indicare il valore massimo del consumo del gas.</description>
    <label>Consumo GAS max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>