force-app/main/default/objects/EligibilityCriteria__c/fields/ConsumptionRangeGASmin__c.field-meta.xml
<CustomField>
    <fullName>ConsumptionRangeGASmin__c</fullName>
    <description>Campo di configurazione usato per indicare il valore minimo del consumo del gas.</description>
    <label>Consumo GAS min</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>