force-app/main/default/objects/EligibilityCriteria__c/fields/EligibleForAllCities__c.field-meta.xml
<CustomField>
    <fullName>EligibleForAllCities__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo di configurazione usato per indicare che il prodotto è vendibile in tutte le province.</description>
    <label>Eleggibile per tutte le province</label>
    <type>Checkbox</type>
</CustomField>