force-app/main/default/objects/EligibilityCriteria__c/fields/EquipmenType__c.field-meta.xml
<CustomField>
    <fullName>EquipmenType__c</fullName>
    <description>Campo di configurazione usato per indicare il tipo apparecchiatura per il record di criterio nella funzionalità di Configurazione Offerta Tecnica</description>
    <label>Tipo Apparecchiatura</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_MeterType</valueSetName>
    </valueSet>
</CustomField>