force-app/main/default/objects/EligibilityCriteria__c/fields/GreenEnergyOption__c.field-meta.xml
<CustomField>
    <fullName>GreenEnergyOption__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo di configurazione usato per indicare se ci deve essere(o meno) la presenza dell&apos;opzone Energia Verde per il record di criterio nella funzionalità di Configurazione Offerta Tecnica</description>
    <label>Opzione Energia Verde</label>
    <type>Checkbox</type>
</CustomField>