force-app/main/default/objects/EligibilityCriteria__c/fields/ImplantTypeOperator__c.field-meta.xml
<CustomField>
    <fullName>ImplantTypeOperator__c</fullName>
    <label>Operatore Tipologia Impianto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_EligibilityParameteOperator</valueSetName>
    </valueSet>
</CustomField>