force-app/main/default/objects/EligibilityCriteria__c/fields/Login__c.field-meta.xml
<CustomField>
    <fullName>Login__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo di configurazione usato per indicare l&apos;user del record di criterio nella funzionalità di Configurazione Offerta Tecnica</description>
    <label>Login</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Criteri_di_Eleggibilita</relationshipName>
    <type>Lookup</type>
</CustomField>