force-app/main/default/objects/EligibilityCriteria__c/fields/LoginGroup__c.field-meta.xml
<CustomField>
    <fullName>LoginGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo di configurazione usato per indicare i gruppi di User del record di criterio nella funzionalità di Configurazione Offerta Tecnica</description>
    <label>Raggruppamento di Login</label>
    <referenceTo>LoginGroup__c</referenceTo>
    <relationshipLabel>Criteri di Eleggibilita</relationshipLabel>
    <relationshipName>Criteri_di_Eleggibilita</relationshipName>
    <type>Lookup</type>
</CustomField>