force-app/main/default/objects/EligibilityCriteria__c/fields/NewClient__c.field-meta.xml
<CustomField>
    <fullName>NewClient__c</fullName>
    <description>Campo di configurazione usato per indicare se deve essere relagato a nuovi clienti (o meno) il record di criterio nella funzionalità di Configurazione Offerta Tecnica</description>
    <label>Nuovo Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>