force-app/main/default/objects/EligibilityCriteria__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <description>Campo di configurazione usato per indicare la provenienza per il record di criterio nella funzionalità di Configurazione Offerta Tecnica</description>
    <label>Provenienza</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_OriginMarket</valueSetName>
    </valueSet>
</CustomField>