force-app/main/default/objects/EligibilityCriteria__c/fields/OriginMarket__c.field-meta.xml
<CustomField>
    <fullName>OriginMarket__c</fullName>
    <description>Mercato di origine del criterio</description>
    <label>Mercato Provenienza</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_OriginMarket</valueSetName>
    </valueSet>
</CustomField>