force-app/main/default/objects/EligibilityCriteria__c/fields/OriginMarketOperator__c.field-meta.xml
<CustomField>
    <fullName>OriginMarketOperator__c</fullName>
    <description>Mercato di origine del criterio.</description>
    <label>Mercato Provenienza Operatore</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_EligibilityParameteOperator</valueSetName>
    </valueSet>
</CustomField>