force-app/main/default/objects/EligibilityCriteria__c/fields/PaymentMode__c.field-meta.xml
<CustomField>
    <fullName>PaymentMode__c</fullName>
    <description>Modalità di pagamento associata al criterio di eleggibilità</description>
    <label>Modalità di pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_PaymentMode</valueSetName>
    </valueSet>
</CustomField>