force-app/main/default/objects/EligibilityCriteria__c/fields/PowerRange__c.field-meta.xml
<CustomField>
    <fullName>PowerRange__c</fullName>
    <description>Campo di configurazione usato per indicare la potenza portata per il record di criterio nella funzionalità di Configurazione Offerta Tecnica</description>
    <formula>Range__r.PowerFlow__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Potenza Portata</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>