force-app/main/default/objects/EligibilityCriteria__c/fields/PowerRangeMax__c.field-meta.xml
<CustomField>
    <fullName>PowerRangeMax__c</fullName>
    <description>Campo di configurazione usato per indicare il valore massimo della potenza.</description>
    <label>Potenza/Portata max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>