force-app/main/default/objects/EligibilityCriteria__c/fields/PowerRangeMin__c.field-meta.xml
<CustomField>
    <fullName>PowerRangeMin__c</fullName>
    <description>Campo di configurazione usato per indicare il valore minimo della potenza.</description>
    <label>Potenza/Portata min</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>