force-app/main/default/objects/EligibilityCriteria__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo di configurazione usato per indicare il prodotto legato al criterio, usato nella funzionalità dei Criteri di Eleggiblità</description>
    <label>Prodotto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Criteri di Eleggibilita</relationshipLabel>
    <relationshipName>EligibilitiesCriteria</relationshipName>
    <type>Lookup</type>
</CustomField>