force-app/main/default/objects/EligibilityCriteria__c/fields/PromoCode__c.field-meta.xml
<CustomField>
    <fullName>PromoCode__c</fullName>
    <description>Campo di configurazione usato per indicare il codice della promozione.</description>
    <label>Codice promozione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>