force-app/main/default/objects/EligibilityCriteria__c/fields/Regions__c.field-meta.xml
<CustomField>
    <fullName>Regions__c</fullName>
    <description>Nome delle regioni associate al criterio di eleggibilità</description>
    <label>Regioni</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_Regions</valueSetName>
    </valueSet>
</CustomField>