force-app/main/default/objects/EligibilityCriteria__c/fields/ResidentDeliveryAddress__c.field-meta.xml
<CustomField>
    <fullName>ResidentDeliveryAddress__c</fullName>
    <label>Residente all&apos;indirizzo di fornitura</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>