force-app/main/default/objects/EligibilityCriteria__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Campo di configurazione usato per indicare la versione del prodotto legato al criterio, usato nella funzionalità dei Criteri di Eleggiblità</description>
    <formula>Product__r.Version__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Versione</label>
    <type>Text</type>
</CustomField>